--- a/coding assignments/index.html
+++ b/coding assignments/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="style.css" rel="stylesheet">
-<title>Module 2 coding</title>
+<title>coding assignment</title>
 
 </head>
 <body>
@@ -14,19 +14,19 @@
 	<div class="col-lg-4 col-md-6 sx-12">
 		<div class="section">
 			<span id="nr1">Chicken</span>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae aut id est tempore error blanditiis facilis dolorum sequi rem veniam sed, minus quaerat eum modi eius eos repellendus nulla suscipit!</p>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, tempore nesciunt enim inventore et eveniet autem molestiae eligendi ea optio consequatur, quae natus fuga, eum quibusdam voluptatum provident! Voluptate, quas!</p>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 sx-12">
 		<div class="section">
 			<span id="nr2">Beef</span>
-				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam, magnam quae. Quod, nisi quam omnis et non eveniet cupiditate consequatur reiciendis doloribus debitis harum suscipit delectus temporibus itaque deserunt nam?</p>
+				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut nisi aliquid magni. Eum modi culpa totam, autem eveniet obcaecati eaque explicabo in labore harum recusandae ex enim et beatae sint!</p>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-12 sx-12">
 		<div class="section">
 			<span id="nr3">Sushi</span>
-				<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque sequi ut nostrum sapiente facere repudiandae, totam ipsum modi maxime aut. Cumque aliquam, maxime veritatis quod similique sequi aliquid corporis voluptatibus?</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga vitae cupiditate odit veritatis quis eum voluptas, voluptatum officia optio minus. Ad corrupti perspiciatis vero mollitia officia minima fugiat excepturi eos.</p>
 		</div>
 	</div>
 </div>
