--- a/coding assignments/index.html
+++ b/coding assignments/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href ="style.css" rel="stylesheet">
+    <link href ="Menu css-2.css" rel="stylesheet">
 <title>coding assignment</title>
 
 </head>
@@ -13,19 +13,19 @@
 <div class="row">
 	<div class="col-lg-4 col-md-6 sx-12">
 		<div class="section">
-			<span id="nr1">Chicken</span>
+			<span id="chicken">Chicken</span>
 				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, tempore nesciunt enim inventore et eveniet autem molestiae eligendi ea optio consequatur, quae natus fuga, eum quibusdam voluptatum provident! Voluptate, quas!</p>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 sx-12">
 		<div class="section">
-			<span id="nr2">Beef</span>
+			<span id="beef">Beef</span>
 				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut nisi aliquid magni. Eum modi culpa totam, autem eveniet obcaecati eaque explicabo in labore harum recusandae ex enim et beatae sint!</p>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-12 sx-12">
 		<div class="section">
-			<span id="nr3">Sushi</span>
+			<span id="sushi">Sushi</span>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga vitae cupiditate odit veritatis quis eum voluptas, voluptatum officia optio minus. Ad corrupti perspiciatis vero mollitia officia minima fugiat excepturi eos.</p>
 		</div>
 	</div>
