--- a/coding assignments/index.html
+++ b/coding assignments/index.html
@@ -14,7 +14,7 @@
 	<div class="col-lg-4 col-md-6 sx-12">
 		<div class="section">
 			<span id="chicken">Chicken</span>
-				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, tempore nesciunt enim inventore et eveniet autem molestiae eligendi ea optio consequatur, quae natus fuga, eum quibusdam voluptatum provident! Voluptate, quas!</p>
+				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolor, tempore nesciunt enim inventore et eveniet autem molestiae eligendi ea optio consequatur, quae natus fuga, eum quibusdam volupt!</p>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 sx-12">
@@ -26,7 +26,7 @@
 	<div class="col-lg-4 col-md-12 sx-12">
 		<div class="section">
 			<span id="sushi">Sushi</span>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga vitae cupiditate odit veritatis quis eum voluptas, voluptatum officia optio minus. Ad corrupti perspiciatis vero mollitia officia minima fugiat excepturi eos.</p>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga vitae cupiditate odit veritatis quis eum voluptas, voluptatum officia optio minus. Ad corrupti perspiciatis vero mollitia officia .</p>
 		</div>
 	</div>
 </div>
